<resources>
    <string name="app_name">alc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="str_menu_season_alc">계절술</string>
    <string name="str_menu_weather_alc">날씨술</string>
<!--    <string name="str_menu_today_alc">오늘의술</string>-->
    <string name="str_menu_recommend_snack">추천안주</string>
<!--    <string name="str_menu_alc_store">술가게</string>-->
<!--    <string name="str_menu_regular_delivery">정기배송</string>-->
    <string name="str_menu_question">문의사항</string>
    <string name="str_menu_recommend_alc">술추천</string>
    <string name="str_menu_event">이벤트</string>



</resources>