<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather_alc"
            android:title="@string/str_menu_weather_alc" />
        <item
            android:id="@+id/nav_season_alc"
            android:title="@string/str_menu_season_alc" />
        <item
            android:id="@+id/nav_recommend_snack"
            android:title="@string/str_menu_recommend_snack" />
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_question"
                    android:title="@string/str_menu_question" />
                <item
                    android:id="@+id/nav_recommend_alc"
                    android:title="@string/str_menu_recommend_alc" />
                <item
                    android:id="@+id/nav_event"
                    android:title="@string/str_menu_event" />
            </menu>
        </item>
    </group>
</menu>